--- a/course-04/project/c4-final-project/backend/serverless.yml
+++ b/course-04/project/c4-final-project/backend/serverless.yml
@@ -9,7 +9,7 @@ plugins:
     #npm i --save serverless-plugin-canary-deployments
     #npm install --save serverless-dynamodb-local
     #npm install serverless-offline --save-dev
-  #This plugin allows to restrict permissions for just one of your function npm i --save-dev serverless-roles-per-function
+  #This plugin allows to restrict permissions for just one of your function npm i --save-dev serverless-roles-per-functions
 
 provider:
   name: aws
@@ -26,6 +26,7 @@ provider:
     TODOS_TABLE: Todos-${self:provider.stage}
     TODOS_S3_BUCKET: badiou-serverless-todo-app-${self:provider.stage}
     SIGNED_URL_EXPIRATION: 300
+    USER_ID: UserId
 
   iamRoleStatements: #here i have assign a global iam role policies.
     - Effect: Allow
@@ -38,6 +39,11 @@ provider:
         - dynamodb:GetItem
       Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
 
+    - Effect: Allow 
+      Action:
+        - s3:PutObject
+        - s3:GetObject
+      Resource: 'arn:aws:s3:::${self:provider.environment.TODOS_S3_BUCKET}/*'
 
 
 #List of the functions
@@ -57,13 +63,19 @@ functions:
           authorizer: Auth
 
   # TODO: Configure this function
-  GetTodos:
+ 
   CreateTodo:
     handler: src/lambda/http/createTodo.handler
     events:
       - http:
           method: post
           path: todos
+          reqValidatorName: RequestBodyValidator
+          documentation:
+            summary: Create a new todo
+            description: Create a new todo
+            requestModels:
+              'application/json': TodoRequest #the same name like custom models
 
   # TODO: Configure this function
   UpdateTodo:
@@ -89,6 +101,94 @@ functions:
           method: post
           path: todos/{todoId}/attachment
 
+    #Allow to validate createTodo
+custom:
+  documentation:
+    api:
+      info:
+        version: v1.0.0
+        title: Udagram API
+        description: Serverless application for images sharing
+    models:
+      - name: GroupRequest
+        contentType: application/json
+        schema: ${file(models/create-todo-request.json)}
+  
 resources:
   Resources:
-    # TODO: Add any necessary AWS resources
+    #ressource to make authorization
+    GatewayResponseDefault4XX:
+      Type: AWS::ApiGateway::GatewayResponse
+      Properties:
+        ResponseParameters:
+          gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
+          gatewayresponse.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
+          gatewayresponse.header.Access-Control-Allow-Methods: "'GET,OPTIONS,POST'"
+        ResponseType: DEFAULT_4XX
+        RestApiId:
+          Ref: ApiGatewayRestApi
+
+    # DynamoDB
+    TodoTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        AttributeDefinitions:
+          - AttributeName: userId
+            AttributeType: S
+          - AttributeName: createdAt
+            AttributeType: S
+          - AttributeName: todoId
+            AttributeType: S
+        KeySchema:
+          - AttributeName: userId
+            KeyType: HASH
+          - AttributeName: todoId
+            KeyType: RANGE
+        BillingMode: PAY_PER_REQUEST
+        TableName: ${self:provider.environment.TODOS_TABLE}
+        LocalSecondaryIndexes:
+          - IndexName: ${self:provider.environment.USER_ID}
+            KeySchema:
+              - AttributeName: userId
+                KeyType: HASH
+              - AttributeName: createdAt
+                KeyType: RANGE
+            Projection:
+              ProjectionType: ALL
+
+    # S3 Bucket
+    AttachmentBucket:
+      Type: AWS::S3::Bucket
+      Properties:
+        BucketName: ${self:provider.environment.TODOS_S3_BUCKET}
+        CorsConfiguration:
+          CorsRules:
+            -
+              AllowedOrigins:
+                - '*'
+              AllowedHeaders:
+                - '*'
+              AllowedMethods:
+                - GET
+                - PUT
+                - POST
+                - DELETE
+                - HEAD
+              MaxAge: 3000
+
+    # S3 Bucket Policy
+    BucketPolicy:
+      Type: AWS::S3::BucketPolicy
+      Properties:
+        PolicyDocument:
+          Id: Policy
+          Version: '2012-10-17'
+          Statement:
+            - Sid: PublicReadWriteBucketPolicy
+              Effect: Allow
+              Principal: '*' # Anyone
+              Action:
+                - s3:GetObject
+                - s3:PutObject
+              Resource: arn:aws:s3:::${self:provider.environment.S3_BUCKET}/*
+        Bucket: !Ref AttachmentBucket
