--- a/course-04/project/c4-final-project/backend/serverless.yml
+++ b/course-04/project/c4-final-project/backend/serverless.yml
@@ -70,6 +70,7 @@ functions:
       - http:
           method: post
           path: todos
+          cors: true
           reqValidatorName: RequestBodyValidator
           documentation:
             summary: Create a new todo
@@ -84,6 +85,7 @@ functions:
       - http:
           method: patch
           path: todos/{todoId}
+          cors: true
 
   # TODO: Configure this function
   DeleteTodo:
@@ -92,6 +94,7 @@ functions:
       - http:
           method: delete
           path: todos/{todoId}
+          cors: true
 
   # TODO: Configure this function
   GenerateUploadUrl:
@@ -100,6 +103,7 @@ functions:
       - http:
           method: post
           path: todos/{todoId}/attachment
+          cors: true
 
     #Allow to validate createTodo
 custom:
