--- a/course-04/project/c4-final-project/backend/serverless.yml
+++ b/course-04/project/c4-final-project/backend/serverless.yml
@@ -27,23 +27,6 @@ provider:
     TODOS_S3_BUCKET: badiou-serverless-todo-app-${self:provider.stage}
     SIGNED_URL_EXPIRATION: 300
     USER_ID: UserId
-    
-  iamRoleStatements: #here i have assign a global iam role policies.
-    - Effect: Allow
-      Action:
-        #iamrole pour recupérer la liste des groupes depuis DynamoDB
-        - dynamodb:Scan
-        #iamrole pour utiliser Post vers une base de données DynamoDB
-        - dynamodb:PutItem
-        #iamrole pour utiliser faire un getItem
-        - dynamodb:GetItem
-      Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
-
-    - Effect: Allow 
-      Action:
-        - s3:PutObject
-        - s3:GetObject
-      Resource: 'arn:aws:s3:::${self:provider.environment.TODOS_S3_BUCKET}/*'
 
 
 #List of the functions
@@ -61,6 +44,11 @@ functions:
           path: todos
           cors: true
           authorizer: Auth
+    iamRoleStatements:
+      - Effect: Allow
+        Action:
+          - dynamodb:Query
+        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
 
   # TODO: Configure this function
  
@@ -77,6 +65,11 @@ functions:
             description: Create a new todo
             requestModels:
               'application/json': TodoRequest #the same name like custom models
+    iamRoleStatements:
+      - Effect: Allow
+        Action:
+          - dynamodb:PutItem
+        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
 
   # TODO: Configure this function
   UpdateTodo:
@@ -86,6 +79,12 @@ functions:
           method: patch
           path: todos/{todoId}
           cors: true
+    iamRoleStatements:
+      - Effect: Allow
+        Action:
+          - dynamodb:UpdateItem
+          - dynamodb:GetItem
+        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
 
   # TODO: Configure this function
   DeleteTodo:
@@ -95,6 +94,12 @@ functions:
           method: delete
           path: todos/{todoId}
           cors: true
+    iamRoleStatements:
+      - Effect: Allow
+        Action:
+          - dynamodb:DeleteItem
+          - dynamodb:GetItem
+        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
 
   # TODO: Configure this function
   GenerateUploadUrl:
@@ -104,6 +109,12 @@ functions:
           method: post
           path: todos/{todoId}/attachment
           cors: true
+    iamRoleStatements:
+      - Effect: Allow
+        Action:
+          - s3:PutObject
+          - s3:GetObject
+        Resource: arn:aws:s3:::${self:provider.environment.TODOS_S3_BUCKET}/*
 
     #Allow to validate createTodo
 custom:
