--- a/course-04/project/c4-final-project/backend/serverless.yml
+++ b/course-04/project/c4-final-project/backend/serverless.yml
@@ -1,10 +1,11 @@
 service:
-  name: badiou-serverless-todo-app
+  name: serverless-todo-app
 
 plugins:
   - serverless-webpack
   - serverless-plugin-canary-deployments
   - serverless-dynamodb-local
+  - serverless-iam-roles-per-function
   - serverless-offline
     #npm i --save serverless-plugin-canary-deployments
     #npm install --save serverless-dynamodb-local
@@ -17,14 +18,14 @@ provider:
 
   stage: ${opt:stage, 'dev'}
   region: ${opt:region, 'us-east-1'}
-  #Added for making tracing the log for lambda and apiGateway 
-  tracing:
-    lambda: true
-    apiGateway: true
+  # #Added for making tracing the log for lambda and apiGateway 
+  # tracing:
+  #   lambda: true
+  #   apiGateway: true
 
   environment:
     TODOS_TABLE: Todos-${self:provider.stage}
-    TODOS_S3_BUCKET: badiou-serverless-todo-app-${self:provider.stage}
+    TODOS_S3_BUCKET: serverless-obb-${self:provider.stage}
     SIGNED_URL_EXPIRATION: 300
     USER_ID: UserId
 
@@ -47,7 +48,7 @@ functions:
     iamRoleStatements:
       - Effect: Allow
         Action:
-          - dynamodb:Query
+          - dynamodb:Scan
         Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
 
   # TODO: Configure this function
@@ -201,7 +202,7 @@ resources:
           Statement:
             - Sid: PublicReadWriteBucketPolicy
               Effect: Allow
-              Principal: '*' # Anyone
+              Principal: '*' 
               Action:
                 - s3:GetObject
                 - s3:PutObject
