--- a/course-04/project/c4-final-project/backend/serverless.yml
+++ b/course-04/project/c4-final-project/backend/serverless.yml
@@ -35,7 +35,7 @@ provider:
     TODOS_TABLE: Todos-${self:provider.stage}
     TODOS_S3_BUCKET: serverless-obb-${self:provider.stage}
     SIGNED_URL_EXPIRATION: 300
-    USER_ID: UserId
+    INDEX_NAME: UserId
 
 
   #Allow to validate createTodo
@@ -70,7 +70,7 @@ functions:
     iamRoleStatements:
       - Effect: Allow
         Action:
-          - dynamodb:Scan
+          - dynamodb:Query
         Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
   # TODO: Configure this function
  
@@ -107,6 +107,7 @@ functions:
           method: patch
           path: todos/{todoId}
           cors: true
+          authorizer: Auth
     iamRoleStatements:
       - Effect: Allow
         Action:
@@ -201,7 +202,7 @@ resources:
         BillingMode: PAY_PER_REQUEST
         TableName: ${self:provider.environment.TODOS_TABLE}
         LocalSecondaryIndexes:
-          - IndexName: ${self:provider.environment.USER_ID}
+          - IndexName: ${self:provider.environment.INDEX_NAME}
             KeySchema:
               - AttributeName: userId
                 KeyType: HASH
