--- a/capstone-Cloud-developer/backend/package.json
+++ b/capstone-Cloud-developer/backend/package.json
@@ -10,6 +10,7 @@
     "http-errors": "^1.7.2",
     "jsonwebtoken": "^8.5.1",
     "middy": "^0.27.0",
+    "serverless-dynamodb-local": "^0.2.39",
     "source-map-support": "^0.5.11",
     "uuid": "^3.3.2",
     "winston": "^3.2.1"
@@ -21,7 +22,8 @@
     "aws-sdk": "^2.433.0",
     "serverless-aws-documentation": "^1.1.0",
     "serverless-iam-roles-per-function": "^1.0.4",
-    "serverless-plugin-canary-deployments": "^0.4.7",
+    "serverless-offline": "^6.5.0",
+    "serverless-plugin-canary-deployments": "^0.4.8",
     "serverless-reqvalidator-plugin": "^1.0.3",
     "serverless-webpack": "^5.2.0",
     "ts-loader": "^5.3.3",
