--- a/capstone-Cloud-developer/backend/serverless.yml
+++ b/capstone-Cloud-developer/backend/serverless.yml
@@ -270,7 +270,7 @@ resources:
           - AttributeName: bookId
             AttributeType: S
           - AttributeName: price
-            AttributeType: S
+            AttributeType: N
           - AttributeName: author
             AttributeType: S
         KeySchema:
