Revert "Change Attribute price to integer"
This reverts commit 5931ca6aa46291549793f00c09e6c79249871c8f.

--- a/capstone-Cloud-developer/backend/serverless.yml
+++ b/capstone-Cloud-developer/backend/serverless.yml
@@ -270,7 +270,7 @@ resources:
           - AttributeName: bookId
             AttributeType: S
           - AttributeName: price
-            AttributeType: N
+            AttributeType: S
           - AttributeName: author
             AttributeType: S
         KeySchema:
